--- a/templates/best_list.html
+++ b/templates/best_list.html
@@ -1,18 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
   <div class="container my-5">
-    <h1>Hello, world!</h1>
+    <h1>Best </h1>
     <div class="col-lg-8 px-0 ">
       <p class="fs-5">
-        You've successfully loaded up the Bootstrap starter example. It includes <a href="https://getbootstrap.com/">Bootstrap 5</a> via the <a href="https://www.jsdelivr.com/package/npm/bootstrap">jsDelivr CDN</a> and includes an additional CSS and JS file for your own code.
+        in last 5 days
       </p>
-      <div class="card-deck">
+      <div class="list-group">
         {% for bookmark in bookmarks %}
-          <div class="card">
-            {{ bookmark.title }}
-          </div>
+          <a class= "list-group-item list-group-item-action d-flex justify-content-between align-items-start"href= {% url 'bookmark' bookmark.id %}>
+            <div class="ms-2 me-auto">
+                <div class="fw-bold">{{ bookmark.title }} <small class="text-muted">({{bookmark.url}})</small></div>
+                By: {{ bookmark.author }} at: {{bookmark.created_at|date:"d E Y"}}, {{bookmark.created_at|time:"H:i"}}
+              </div>
+              <span class="badge bg-primary rounded-pill">{{ bookmark.rating }} points</span>
+          </a>
         {% endfor %}
-      </div>
+        </div>
 
       <hr class="col-1 my-4" />
 
