--- a/templates/base.html
+++ b/templates/base.html
@@ -13,38 +13,56 @@
   </head>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href={% url 'best_list'%}>Leftkomendacje</a>
+      <a class="navbar-brand" href={% url 'best_list' delta=5 %}>Leftkomendacje</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Top</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li>
-                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href={% url 'best_list' delta=1 %}>Today</a>
               </li>
               <li>
-                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href={% url 'best_list' delta=7 %}>This week</a>
               </li>
               <li>
                 <hr class="dropdown-divider" />
               </li>
               <li>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href={% url 'best_list' delta=30 %}>30 days</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href={% url 'best_list' delta=0 %}>All-time</a>
               </li>
             </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Fresh</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li>
+                <a class="dropdown-item" href={% url 'best_list' delta=1 %}>Today</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href={% url 'best_list' delta=7 %}>This week</a>
+              </li>
+              <li>
+                <hr class="dropdown-divider" />
+              </li>
+              <li>
+                <a class="dropdown-item" href={% url 'best_list' delta=30 %}>30 days</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href={% url 'best_list' delta=0 %}>All-time</a>
+              </li>
+            </ul>
           </li>
+
         </ul>
-        <form class="d-flex" role="search">
+        {% comment %} <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
           <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        </form> {% endcomment %}
       </div>
     </div>
   </nav>
@@ -52,5 +70,4 @@
 
   {% endblock %}
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </html>
