--- a/templates/fresh_list.html
+++ b/templates/fresh_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
   <div class="container my-5">
-    <h1>Best </h1>
+    <h1>Fresh </h1>
     <div class="col-lg-8 px-0 ">
       <p class="fs-5">
         {% if delta == 0 %}
