--- a/templates/bookmark.html
+++ b/templates/bookmark.html
@@ -1,126 +1,66 @@
-{% extends 'base.html' %}
-{% block content %}
-  <div class="container my-5">
-    <h1>{{bookmark.title}}</h1>
-    <div class="col-lg-8 px-0 ">
-        <small>{{bookmark.url}}</small>
-      
-      <ul class="list-group">
-        {% include "comments.html" %}
-        </ul>
+{% extends 'base.html' %} {% block content %}
+<div class="container my-5">
+  <h1>{{bookmark.title}}</h1>
+  <div class="col-lg-8 px-0">
+    <small>{{bookmark.url}}</small>
 
-        <div class="just-padding">
+    {% comment %} <ul class="list-group">
+      {% include "comments.html" %}
+    </ul> {% endcomment %}
 
-          <div class="list-group list-group-root card">
-        
-            <a href="#item-1" class="list-group-item" data-bs-toggle="collapse">
-              <i class="fas fa-angle-right mr-2"></i>Item 1
-            </a>
-            <div class="list-group collapse" id="item-1">
-        
-            <a href="#item-1-1" class="list-group-item" data-bs-toggle="collapse">
-              <i class="fas fa-angle-right mr-2"></i>Item 1.1
-            </a>
-            <div class="list-group collapse" id="item-1-1">
-              <a href="#" class="list-group-item">Item 1.1.1</a>
-              <a href="#" class="list-group-item">Item 1.1.2</a>
-              <a href="#" class="list-group-item">Item 1.1.3</a>
-            </div>
-        
-            <a href="#item-1-2" class="list-group-item" data-bs-toggle="collapse">
-              <i class="fas fa-angle-right mr-2"></i>Item 1.2
-            </a>
-            <div class="list-group collapse" id="item-1-2">
-              <a href="#" class="list-group-item">Item 1.2.1</a>
-              <a href="#" class="list-group-item">Item 1.2.2</a>
-             <a href="#" class="list-group-item">Item 1.2.3</a>
-            </div>
-        
-            <a href="#item-1-3" class="list-group-item" data-bs-toggle="collapse">
-              <i class="fas fa-angle-right mr-2"></i>Item 1.3
-            </a>
-            <div class="list-group collapse" id="item-1-3">
-              <a href="#" class="list-group-item">Item 1.3.1</a>
-              <a href="#" class="list-group-item">Item 1.3.2</a>
-              <a href="#" class="list-group-item">Item 1.3.3</a>
-            </div>
-        
-          </div>
-        
-          <a href="#item-2" class="list-group-item" data-bs-toggle="collapse">
-            <i class="fas fa-angle-right mr-2"></i>Item 2
+    {% comment %}
+    <div class="just-padding">
+      <div class="list-group list-group-root card">
+        <a href="#item-1" class="list-group-item" data-bs-toggle="collapse">
+          <i class="fas fa-angle-right mr-2"></i>Item 1
+        </a>
+        <div class="list-group collapse" id="item-1">
+          <a href="#item-1-1" class="list-group-item" data-bs-toggle="collapse">
+            <i class="fas fa-angle-right mr-2"></i>Item 1.1
           </a>
-          <div class="list-group collapse" id="item-2">
-        
-            <a href="#item-2-1" class="list-group-item" data-bs-toggle="collapse">
-              <i class="fas fa-angle-right mr-2"></i>Item 2.1
-            </a>
-            <div class="list-group collapse" id="item-2-1">
-              <a href="#" class="list-group-item">Item 2.1.1</a>
-              <a href="#" class="list-group-item">Item 2.1.2</a>
-              <a href="#" class="list-group-item">Item 2.1.3</a>
-            </div>
-        
-            <a href="#item-2-2" class="list-group-item" data-bs-toggle="collapse">
-              <i class="fas fa-angle-right mr-2"></i>Item 2.2
-            </a>
-            <div class="list-group collapse" id="item-2-2">
-              <a href="#" class="list-group-item">Item 2.2.1</a>
-              <a href="#" class="list-group-item">Item 2.2.2</a>
-              <a href="#" class="list-group-item">Item 2.2.3</a>
-            </div>
-        
-            <a href="#item-2-3" class="list-group-item" data-bs-toggle="collapse">
-              <i class="fas fa-angle-right mr-2"></i>Item 2.3
-            </a>
-            <div class="list-group collapse" id="item-2-3">
-              <a href="#" class="list-group-item">Item 2.3.1</a>
-              <a href="#" class="list-group-item">Item 2.3.2</a>
-              <a href="#" class="list-group-item">Item 2.3.3</a>
-            </div>
+          <div class="list-group collapse" id="item-1-1">
+            <a href="#" class="list-group-item">Item 1.1.1</a>
+            <a href="#" class="list-group-item">Item 1.1.2</a>
+            <a href="#" class="list-group-item">Item 1.1.3</a>
           </div>
-        
-          <a href="#item-3" class="list-group-item" data-bs-toggle="collapse">
-            <i class="fas fa-angle-right mr-2"></i>Item 3
+
+          <a href="#item-1-2" class="list-group-item" data-bs-toggle="collapse">
+            <i class="fas fa-angle-right mr-2"></i>Item 1.2
           </a>
-          <div class="list-group collapse" id="item-3">
-        
-            <a href="#item-3-1" class="list-group-item" data-bs-toggle="collapse">
-              <i class="fas fa-angle-right mr-2"></i>Item 3.1
-            </a>
-            <div class="list-group collapse" id="item-3-1">
-              <a href="#" class="list-group-item">Item 3.1.1</a>
-              <a href="#" class="list-group-item">Item 3.1.2</a>
-              <a href="#" class="list-group-item">Item 3.1.3</a>
-            </div>
-        
-            <a href="#item-3-2" class="list-group-item" data-bs-toggle="collapse">
-              <i class="fas fa-angle-right mr-2"></i>Item 3.2
-            </a>
-            <div class="list-group collapse" id="item-3-2">
-              <a href="#" class="list-group-item">Item 3.2.1</a>
-              <a href="#" class="list-group-item">Item 3.2.2</a>
-              <a href="#" class="list-group-item">Item 3.2.3</a>
-            </div>
-        
-            <a href="#item-3-3" class="list-group-item" data-bs-toggle="collapse">
-              <i class="fas fa-angle-right mr-2"></i>Item 3.3
-            </a>
-            <div class="list-group collapse" id="item-3-3">
-              <a href="#" class="list-group-item">Item 3.3.1</a>
-              <a href="#" class="list-group-item">Item 3.3.2</a>
-              <a href="#" class="list-group-item">Item 3.3.3</a>
-            </div>
-        
+          <div class="list-group collapse" id="item-1-2">
+            <a href="#" class="list-group-item">Item 1.2.1</a>
+            <a href="#" class="list-group-item">Item 1.2.2</a>
+            <a href="#" class="list-group-item">Item 1.2.3</a>
           </div>
-        
+
+          <a href="#item-1-3" class="list-group-item" data-bs-toggle="collapse">
+            <i class="fas fa-angle-right mr-2"></i>Item 1.3
+          </a>
+          <div class="list-group collapse" id="item-1-3">
+            <a href="#" class="list-group-item">Item 1.3.1</a>
+            <a href="#" class="list-group-item">Item 1.3.2</a>
+            <a href="#" class="list-group-item">Item 1.3.3</a>
+          </div>
         </div>
-        
-        
-      <hr class="col-1 my-4" />
+      </div>
+      {% endcomment %}
 
-      <a href="https://getbootstrap.com" class="btn btn-primary">Read the Bootstrap docs</a>
-      <a href="https://github.com/twbs/examples" class="btn btn-secondary">View on GitHub</a>
+      <div class="just-padding">
+        <div class="list-group list-group-root card">
+        {% include "comments.html" %}
+        </div>
+      </div>
+
+        <hr class="col-1 my-4" />
+
+        <a href="https://getbootstrap.com" class="btn btn-primary"
+          >Read the Bootstrap docs</a
+        >
+        <a href="https://github.com/twbs/examples" class="btn btn-secondary"
+          >View on GitHub</a
+        >
+      </div>
     </div>
+    {% endblock %}
   </div>
-{% endblock %}
+</div>
