--- a/templates/comments.html
+++ b/templates/comments.html
@@ -1,11 +1,43 @@
+{% comment %} {%for comment in comments %}
+<li>
+  {{comment.parent}} {% if comment.children|length %}
+  <ul>
+    {% include "comments.html" with comments=comment.children %}
+  </ul>
+  {% endif %}
+</li>
+{% endfor %} {% endcomment %} 
 {%for comment in comments %}
-    <li>
-        {{comment.parent}}
+<a
+  href="#comment-{{comment.parent.id}}"
+  class="list-group-item"
+  data-bs-toggle="collapse"
+>
+  <i class="fas fa-angle-right mr-2"></i>{{comment.parent}} Has {{comment.children|length}} replies.
+</a>
+<div class="list-group collapse" id="comment-{{comment.parent.id}}">
+  {% if comment.children|length %}
+  
+    {% include "comments.html" with comments=comment.children %}
+  
+  {% endif %}
+</div>
+{% endfor %} {% comment %}
+<a href="#item-1-1" class="list-group-item" data-bs-toggle="collapse">
+  <i class="fas fa-angle-right mr-2"></i>Item 1.1
+</a>
+<div class="list-group collapse" id="item-1-1">
+  <a href="#" class="list-group-item">Item 1.1.1</a>
+  <a href="#" class="list-group-item">Item 1.1.2</a>
+  <a href="#" class="list-group-item">Item 1.1.3</a>
+</div>
 
-        {% if comment.children|length %}
-        <ul>
-            {% include "comments.html" with comments=comment.children %}
-        </ul>
-        {% endif %}
-    </li>
-{% endfor %}
+<a href="#item-1-2" class="list-group-item" data-bs-toggle="collapse">
+  <i class="fas fa-angle-right mr-2"></i>Item 1.2
+</a>
+<div class="list-group collapse" id="item-1-2">
+  <a href="#" class="list-group-item">Item 1.2.1</a>
+  <a href="#" class="list-group-item">Item 1.2.2</a>
+  <a href="#" class="list-group-item">Item 1.2.3</a>
+</div>
+{% endcomment %}
