--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+{% load static %}
 <html>
   <head>
     <meta charset="utf-8" />
@@ -8,9 +8,13 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="{% static 'custom.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/e5554fe1c9.js" crossorigin="anonymous"></script>
+    <script src="{% static 'custom.js' %}" crossorigin="anonymous"></script>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📕</text></svg>">
+
   </head>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
@@ -42,19 +46,19 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Fresh</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li>
-                <a class="dropdown-item" href={% url 'best_list' delta=1 %}>Today</a>
+                <a class="dropdown-item" href={% url 'fresh_list' delta=1 %}>Today</a>
               </li>
               <li>
-                <a class="dropdown-item" href={% url 'best_list' delta=7 %}>This week</a>
+                <a class="dropdown-item" href={% url 'fresh_list' delta=7 %}>This week</a>
               </li>
               <li>
                 <hr class="dropdown-divider" />
               </li>
               <li>
-                <a class="dropdown-item" href={% url 'best_list' delta=30 %}>30 days</a>
+                <a class="dropdown-item" href={% url 'fresh_list' delta=30 %}>30 days</a>
               </li>
               <li>
-                <a class="dropdown-item" href={% url 'best_list' delta=0 %}>All-time</a>
+                <a class="dropdown-item" href={% url 'fresh_list' delta=0 %}>All-time</a>
               </li>
             </ul>
           </li>
