--- a/templates/comments.html
+++ b/templates/comments.html
@@ -22,22 +22,4 @@
   
   {% endif %}
 </div>
-{% endfor %} {% comment %}
-<a href="#item-1-1" class="list-group-item" data-bs-toggle="collapse">
-  <i class="fas fa-angle-right mr-2"></i>Item 1.1
-</a>
-<div class="list-group collapse" id="item-1-1">
-  <a href="#" class="list-group-item">Item 1.1.1</a>
-  <a href="#" class="list-group-item">Item 1.1.2</a>
-  <a href="#" class="list-group-item">Item 1.1.3</a>
-</div>
-
-<a href="#item-1-2" class="list-group-item" data-bs-toggle="collapse">
-  <i class="fas fa-angle-right mr-2"></i>Item 1.2
-</a>
-<div class="list-group collapse" id="item-1-2">
-  <a href="#" class="list-group-item">Item 1.2.1</a>
-  <a href="#" class="list-group-item">Item 1.2.2</a>
-  <a href="#" class="list-group-item">Item 1.2.3</a>
-</div>
-{% endcomment %}
+{% endfor %} 
